# nix-haskell-template

./: .gitignore  ChangeLog.org  LICENSE  Makefile  PACKAGE-NAME.cabal  README.org  cabal.project  clight-cli.cabal  default.nix  flake.nix  release.nix  shell.nix
nix/: development.nix  sources.json
