cabal-version:  2.2
name:           PACKAGE-NAME
version:        0.1.0.0
synopsis:       PACKAGE-DESCRIPTION
description:    Please see the README on GitHub at <https://github.com/GITHUB-OWNER/GITHUB-REPO#readme>
homepage:       https://github.com/GITHUB-OWNER/GITHUB-REPO#readme
bug-reports:    https://github.com/GITHUB-OWNER/GITHUB-REPO/issues
author:         AUTHOR-NAME
maintainer:     AUTHOR-CONTACT
copyright:      Copyright: (c) YEAR AUTHOR-NAME
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.org
    ChangeLog.org

source-repository head
  type: git
  location: https://github.com/GITHUB-OWNER/GITHUB-REPO

common base
  ghc-options: -Wall -Wextra -Wno-unrecognised-pragmas -Wno-orphans
  default-language: Haskell2010
  build-depends: base >= 4.12 && < 5
  other-modules: Paths_PACKAGE-PATHS-MODULE

common binary-base
  import: base
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends: PACKAGE-NAME

common deps-datastructs
  build-depends:
      containers
    , mtl
    , text
    , transformers
    , unordered-containers
    , vector

common deps-datastructs-fancy
  build-depends:
      free
    , fused-effects
    , fingertree

common deps-cli
  build-depends:
      optparse-applicative
    -- for configs
    , dhall

library
  import: base
  exposed-modules: Lib
  hs-source-dirs: src

executable PACKAGE-BINARY
  import: binary-base
  main-is: Main.hs
  hs-source-dirs: app

test-suite PACKAGE-NAME-test
  import: binary-base
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
