cabal-version:  2.2
name:           clight-cli
version:        0.1.0.0
synopsis:       CLI for interfacing with clight's bus API
description:    Please see the README on GitHub at <https://github.com/stites/possibly#readme>
homepage:       https://github.com/stites/clight-cli#readme
bug-reports:    https://github.com/stites/clight-cli/issues
author:         Sam Stites
maintainer:     fnz@fgvgrf.vb (cipher:rot13)
copyright:      Copyright: (c) 2020 Sam Stites
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.org
    ChangeLog.org

source-repository head
  type: git
  location: https://github.com/stites/clight-cli

common base
  ghc-options: -Wall -Wextra -Wno-unrecognised-pragmas -Wno-orphans
  default-language: Haskell2010
  build-depends: base >= 4.12 && < 5

common deps-datastructs
  build-depends:
      containers
    , mtl
    , text
    , transformers
    , unordered-containers
    , vector

common deps-datastructs-fancy
  build-depends:
      free
    , fused-effects
    , fingertree

common deps-cli
  build-depends:
      optparse-applicative
    , dhall -- for configs

library
  import: base
  exposed-modules: Lib
  other-modules: Paths_clight_cli
  hs-source-dirs: src

executable clight-cli
  import: base
  main-is: Main.hs
  other-modules: Paths_clight_cli
  hs-source-dirs: app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends: clight

test-suite clight-test
  import: base
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules: Paths_clight_cli
  hs-source-dirs: test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends: clight
